@@ -1,4 +1,5 @@
 v 1.3.2
+	#103 - Multiple columns search filtering at datatables.
 	#98 - Add more field types.
 			- Dropdown field type.
 			- Multiselect field type
